[package]
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
name = "hb-etcd"
version = "0.1.0"

[dependencies]
env_logger = "0.3"
error-chain = "0.5.0"
etcd = "0.5.5"
futures = "0.1.3"
futures-cpupool = "0.1.2"
log = "0.3"
tokio-core = "0.1"

[dependencies.tokio-proto]
git = "https://github.com/tokio-rs/tokio-proto"

[dependencies.tokio-service]
git = "https://github.com/tokio-rs/tokio-service"

[dependencies.tokio-timer]
git = "https://github.com/tokio-rs/tokio-timer"
